--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
 contourpy==1.2.1
 cycler==0.12.1
-fonttools==4.53.1
 importlib_resources==6.4.0
-kiwisolver==1.4.5
 matplotlib==3.9.1
 mpmath==1.3.0
 numpy==2.0.0
 packaging==24.1
 pillow==10.4.0
+pynput==1.7.7
+pyobjc-core==10.3.1
+pyobjc-framework-ApplicationServices==10.3.1
+pyobjc-framework-Cocoa==10.3.1
+pyobjc-framework-CoreText==10.3.1
+pyobjc-framework-Quartz==10.3.1
 pyparsing==3.1.2
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.14
+PyQt5_sip==12.15.0
 python-dateutil==2.9.0.post0
 scipy==1.13.1
 six==1.16.0
