--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 contourpy==1.2.1
 cycler==0.12.1
+fonttools==4.53.1
+future==1.0.0
 importlib_resources==6.4.0
+kiwisolver==1.4.5
 matplotlib==3.9.1
 mpmath==1.3.0
 numpy==2.0.0
@@ -13,10 +16,13 @@ pyobjc-framework-Cocoa==10.3.1
 pyobjc-framework-CoreText==10.3.1
 pyobjc-framework-Quartz==10.3.1
 pyparsing==3.1.2
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.14
-PyQt5_sip==12.15.0
+PyQt6==6.7.1
+PyQt6-Charts==6.7.0
+PyQt6-Charts-Qt6==6.7.2
+PyQt6-Qt6==6.7.2
+PyQt6_sip==13.8.0
 python-dateutil==2.9.0.post0
 scipy==1.13.1
 six==1.16.0
+tkintertable==1.3.3
 zipp==3.19.2
